src/snapshots/lambda3__cst__tests__parse_expr_test@missing_body_rparen.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/expr/missing_body_rparen.l3
---
(
    "(\\x.",
    [
        "Expected expression",
        "unexpected token Eof, expected \')\'",
    ],
    Root@0..4
      ParenE@0..4
        LParen@0..1 "("
        LambdaE@1..4
          Backslash@1..2 "\\"
          VarP@2..3
            Ident@2..3 "x"
          Dot@3..4 "."
          Error@4..4
        Error@4..4
    ,
)
