src/snapshots/lambda3__cst__tests__parse_patterns_test@missing_closing_paren.l3.snap
---
source: src/cst.rs
expression: "(input, parse.errors, node)"
input_file: src/examples/patterns/missing_closing_paren.l3
---
(
    "(_ : Int",
    [
        "missing closing paren, got Eof",
    ],
    Root@0..8
      ParenP@0..8
        LParen@0..1 "("
        AnnotationP@1..8
          WildcardP@1..2
            Underscore@1..2 "_"
          Whitespace@2..3 " "
          Colon@3..4 ":"
          IntTy@4..8
            Whitespace@4..5 " "
            Int@5..8 "Int"
        Error@8..8
    ,
)
